fixed showing pencils on mobile

--- a/client/styles/layout/app-sidebar.scss
+++ b/client/styles/layout/app-sidebar.scss
@@ -39,6 +39,7 @@
             right: 16px;
             top: 12px;
             @media (max-width: $screen-phone) {
+                display: none;
                 i {
                     display: none;
                 }
